implemented methods that allow to search for one member and get all their details